--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -3,9 +3,9 @@
   border-radius: 5px;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
   display: inline-table;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 8px;
-  margin: 20px 0px 0px 25px;
+  margin: 20px 15px 0px 25px;
   transition: 0.3s;
 }
 
@@ -22,14 +22,13 @@
 
 .card a {
   color: rgba(0, 0, 0, 0.966);
-  text-decoration: none;
 }
 
 .container {
   font-size: 12px;
   margin: 10px, 0, 0;
   padding: 0px 0px 0px 5px;
-  height: 65px;
+  height: 55px;
   margin-top: 10px;
   max-width: 180px;
 }
